new proj/src/objects/GE_ES_Entitlement__c.object
<CustomObject>
    <description>Entitlement Standalone object</description>
    <fields>
        <fullName>GE_ES_Entitlement_Price__c</fullName>
        <label>GE ES Entitlement  Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Entitlement_Quantity__c</fullName>
        <label>GE ES Entitlement Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to opportunity</description>
        <label>GE ES Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GE ES Entitlements</relationshipLabel>
        <relationshipName>GE_ES_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to product (price book entry)</description>
        <label>GE ES Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GE ES Entitlements</relationshipLabel>
        <relationshipName>GE_ES_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GE ES Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Entitlement_Price__c</columns>
        <columns>GE_ES_Entitlement_Quantity__c</columns>
        <columns>GE_ES_Opportunity__c</columns>
        <columns>GE_ES_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GE ES Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>